--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "events": "^1.1.1",
     "express": "^4.15.3",
+    "history": "^4.6.3",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
